<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_blk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

          <TextView
            android:id="@+id/poem_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poem_lbl"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="20sp"></TextView>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_item_gradient"
            android:layout_toRightOf="@id/poem_lbl"
            android:text="@string/exit_lbl" />

    </RelativeLayout>

      <TableLayout
        android:id="@+id/up_blk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_blk">

        <TableRow>

            <Button
                android:id="@+id/pianka_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pianka_lbl"
                android:background="@drawable/spinner_item_gradient"/>

            <Button
                android:id="@+id/zs_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zs_lbl"
                android:background="@drawable/spinner_item_gradient"/>

            <Button
                android:id="@+id/bv_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bv_lbl"
                android:background="@drawable/spinner_item_gradient"/>

            <Button
                android:id="@+id/kbd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kbd_lbl"
                android:background="@drawable/spinner_item_gradient"/>

            <Button
                android:id="@+id/full_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_weight="1"
                android:text="@string/full_lbl"
                android:background="@drawable/spinner_item_gradient"/>

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_below="@id/buttons_blk"
        android:padding="10dp">
    <TextView
        android:id="@+id/out_blk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:layout_weight="1.0"
        android:textStyle="bold"
        android:textSize="20sp"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/bottom_blk">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_item_gradient"
            android:gravity="center"
            android:text="@string/save_lbl"/>

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_item_gradient"
            android:gravity="center"
            android:text="@string/chat_lbl" />
        <Button
            android:id="@+id/arhiv_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_item_gradient"
            android:gravity="center"
            android:text="@string/arhiv_lbl"
            android:enabled="false"/>
    </LinearLayout>

</RelativeLayout>