<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/arhiv_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arhiv_lbl"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"></TextView>

    <ListView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arhiv_lbl">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/bottom_blk">

        <Button
            android:id="@+id/poem_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_item_gradient"
            android:gravity="center"
            android:text="@string/poem_lbl"/>

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_item_gradient"
            android:gravity="center"
            android:text="@string/chat_lbl"/>

    </LinearLayout>

</RelativeLayout>