<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/chat_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_lbl"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="top|center">

        </TextView>

        <ListView
            android:id="@+id/scroller"
            android:layout_width="556dp"
            android:layout_height="906dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="17"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/edit_text_style"
            android:layout_gravity="bottom">
        </EditText>

        <FrameLayout android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/poem_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/spinner_item_gradient"
                android:text="@string/poem_lbl"
                android:gravity="left"></Button>

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/spinner_item_gradient"
                android:text="@string/send_lbl"
                android:gravity="center"></Button>
            <Button
                android:id="@+id/command_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/spinner_item_gradient"
                android:text="@string/command_lbl"
                android:gravity="right"></Button>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>

